deploy: 5bc7c30f99dd59eb6d31a1a009625ff879fba67a

--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "468b1758",
+   "id": "15121bef",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69dd1bf0",
+   "id": "81809042",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "430a10b4",
+   "id": "df066e3a",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99bdc558",
+   "id": "a313a30c",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e210ebe5",
+   "id": "76c6b0d0",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6ee1870",
+   "id": "c4d2dbef",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "17ba59c4",
+   "id": "8f9128ee",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T18:45:34.170072Z",
-     "iopub.status.busy": "2025-01-28T18:45:34.169875Z",
-     "iopub.status.idle": "2025-01-28T18:45:37.712719Z",
-     "shell.execute_reply": "2025-01-28T18:45:37.712201Z"
+     "iopub.execute_input": "2025-01-28T18:53:53.369859Z",
+     "iopub.status.busy": "2025-01-28T18:53:53.369338Z",
+     "iopub.status.idle": "2025-01-28T18:53:57.340805Z",
+     "shell.execute_reply": "2025-01-28T18:53:57.340215Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de0d69d0",
+   "id": "77dba46a",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58b05012",
+   "id": "71803768",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c371d26",
+   "id": "c8e1dfcb",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d43f568b",
+   "id": "1586a8e7",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a76e2cf",
+   "id": "462cda7f",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b4c593b",
+   "id": "a4db9e69",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "148fc6c6",
+   "id": "ca74aa30",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "357e1a26",
+   "id": "2f6c7601",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0e19a0e3",
+   "id": "043cd4b4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T18:45:37.714767Z",
-     "iopub.status.busy": "2025-01-28T18:45:37.714503Z",
-     "iopub.status.idle": "2025-01-28T18:45:39.556821Z",
-     "shell.execute_reply": "2025-01-28T18:45:39.556314Z"
+     "iopub.execute_input": "2025-01-28T18:53:57.343362Z",
+     "iopub.status.busy": "2025-01-28T18:53:57.342860Z",
+     "iopub.status.idle": "2025-01-28T18:53:59.424434Z",
+     "shell.execute_reply": "2025-01-28T18:53:59.423884Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebebf4fc",
+   "id": "165b42ee",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "cd3139a3",
+   "id": "4b0b1a8c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T18:45:39.558612Z",
-     "iopub.status.busy": "2025-01-28T18:45:39.558422Z",
-     "iopub.status.idle": "2025-01-28T18:45:39.562103Z",
-     "shell.execute_reply": "2025-01-28T18:45:39.561429Z"
+     "iopub.execute_input": "2025-01-28T18:53:59.426393Z",
+     "iopub.status.busy": "2025-01-28T18:53:59.426146Z",
+     "iopub.status.idle": "2025-01-28T18:53:59.429534Z",
+     "shell.execute_reply": "2025-01-28T18:53:59.428952Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e55a277",
+   "id": "6b0de4e6",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63696052",
+   "id": "8652cc0e",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b9c07fd",
+   "id": "d0152950",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cf41854",
+   "id": "743d6bbc",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3d3c8e40",
+   "id": "a4f386a8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T18:45:39.563930Z",
-     "iopub.status.busy": "2025-01-28T18:45:39.563604Z",
-     "iopub.status.idle": "2025-01-28T18:45:39.606099Z",
-     "shell.execute_reply": "2025-01-28T18:45:39.605555Z"
+     "iopub.execute_input": "2025-01-28T18:53:59.431426Z",
+     "iopub.status.busy": "2025-01-28T18:53:59.431068Z",
+     "iopub.status.idle": "2025-01-28T18:53:59.477916Z",
+     "shell.execute_reply": "2025-01-28T18:53:59.477397Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6c4c334",
+   "id": "121efcc1",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "390da57a",
+   "id": "d691524c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T18:45:39.607815Z",
-     "iopub.status.busy": "2025-01-28T18:45:39.607619Z",
-     "iopub.status.idle": "2025-01-28T18:45:39.671417Z",
-     "shell.execute_reply": "2025-01-28T18:45:39.670800Z"
+     "iopub.execute_input": "2025-01-28T18:53:59.479726Z",
+     "iopub.status.busy": "2025-01-28T18:53:59.479533Z",
+     "iopub.status.idle": "2025-01-28T18:53:59.549119Z",
+     "shell.execute_reply": "2025-01-28T18:53:59.548591Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "388fcb00",
+   "id": "2c8e8683",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e21ae581",
+   "id": "8b588628",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "852bec50",
+   "id": "9e10258f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T18:45:39.673235Z",
-     "iopub.status.busy": "2025-01-28T18:45:39.673049Z",
-     "iopub.status.idle": "2025-01-28T18:45:39.700721Z",
-     "shell.execute_reply": "2025-01-28T18:45:39.700229Z"
+     "iopub.execute_input": "2025-01-28T18:53:59.551211Z",
+     "iopub.status.busy": "2025-01-28T18:53:59.550835Z",
+     "iopub.status.idle": "2025-01-28T18:53:59.583447Z",
+     "shell.execute_reply": "2025-01-28T18:53:59.582908Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd179693",
+   "id": "6a6bcb1b",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06f76cc0",
+   "id": "e81e758c",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fffe1510",
+   "id": "e3ba964d",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53304b90",
+   "id": "d3304ebe",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "300e8c30",
+   "id": "4571c7a0",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0cfc33db",
+   "id": "e9ddc010",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T18:45:39.702739Z",
-     "iopub.status.busy": "2025-01-28T18:45:39.702374Z",
-     "iopub.status.idle": "2025-01-28T18:45:39.706296Z",
-     "shell.execute_reply": "2025-01-28T18:45:39.705772Z"
+     "iopub.execute_input": "2025-01-28T18:53:59.585331Z",
+     "iopub.status.busy": "2025-01-28T18:53:59.585119Z",
+     "iopub.status.idle": "2025-01-28T18:53:59.589229Z",
+     "shell.execute_reply": "2025-01-28T18:53:59.588644Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9212e1d2",
+   "id": "3bb7e3d6",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "cfb4d24c",
+   "id": "82e7b43a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T18:45:39.708211Z",
-     "iopub.status.busy": "2025-01-28T18:45:39.707753Z",
-     "iopub.status.idle": "2025-01-28T18:45:39.710815Z",
-     "shell.execute_reply": "2025-01-28T18:45:39.710254Z"
+     "iopub.execute_input": "2025-01-28T18:53:59.591091Z",
+     "iopub.status.busy": "2025-01-28T18:53:59.590724Z",
+     "iopub.status.idle": "2025-01-28T18:53:59.593741Z",
+     "shell.execute_reply": "2025-01-28T18:53:59.593241Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "233f39e2",
+   "id": "874b6dee",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "7aa9fb85",
+   "id": "709c2b18",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T18:45:39.712566Z",
-     "iopub.status.busy": "2025-01-28T18:45:39.712214Z",
-     "iopub.status.idle": "2025-01-28T18:45:42.258444Z",
-     "shell.execute_reply": "2025-01-28T18:45:42.257930Z"
+     "iopub.execute_input": "2025-01-28T18:53:59.595601Z",
+     "iopub.status.busy": "2025-01-28T18:53:59.595150Z",
+     "iopub.status.idle": "2025-01-28T18:54:02.243391Z",
+     "shell.execute_reply": "2025-01-28T18:54:02.242791Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c22f4cb4",
+   "id": "6e2df4db",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9670845",
+   "id": "2cb3e1fa",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60518376",
+   "id": "9d1caf70",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cec66fa",
+   "id": "1bea6f34",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "58544418",
+   "id": "b00ad242",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T18:45:42.260559Z",
-     "iopub.status.busy": "2025-01-28T18:45:42.260184Z",
-     "iopub.status.idle": "2025-01-28T18:45:42.263973Z",
-     "shell.execute_reply": "2025-01-28T18:45:42.263469Z"
+     "iopub.execute_input": "2025-01-28T18:54:02.245604Z",
+     "iopub.status.busy": "2025-01-28T18:54:02.245227Z",
+     "iopub.status.idle": "2025-01-28T18:54:02.249011Z",
+     "shell.execute_reply": "2025-01-28T18:54:02.248277Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f19c016aac0>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f87f58d6ac0>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "395b56fd",
+   "id": "1c94261d",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fad1744b",
+   "id": "224fd145",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "963fdfc5",
+   "id": "03bd5eed",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "930efed0",
+   "id": "170a508f",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "7dc2b032",
+   "id": "2400d2be",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T18:45:42.265807Z",
-     "iopub.status.busy": "2025-01-28T18:45:42.265473Z",
-     "iopub.status.idle": "2025-01-28T18:45:42.268692Z",
-     "shell.execute_reply": "2025-01-28T18:45:42.268238Z"
+     "iopub.execute_input": "2025-01-28T18:54:02.251153Z",
+     "iopub.status.busy": "2025-01-28T18:54:02.250579Z",
+     "iopub.status.idle": "2025-01-28T18:54:02.253726Z",
+     "shell.execute_reply": "2025-01-28T18:54:02.253115Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "07fd6b27",
+   "id": "1893f6a0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T18:45:42.270551Z",
-     "iopub.status.busy": "2025-01-28T18:45:42.270054Z",
-     "iopub.status.idle": "2025-01-28T18:45:43.311531Z",
-     "shell.execute_reply": "2025-01-28T18:45:43.310971Z"
+     "iopub.execute_input": "2025-01-28T18:54:02.255732Z",
+     "iopub.status.busy": "2025-01-28T18:54:02.255387Z",
+     "iopub.status.idle": "2025-01-28T18:54:03.321102Z",
+     "shell.execute_reply": "2025-01-28T18:54:03.320596Z"
     }
    },
    "outputs": [
